--- a/styles/holding_page.css
+++ b/styles/holding_page.css
@@ -6,11 +6,11 @@ body {
       font: 20px Lilita One, cursive;
       line-height: 1.8;
       color: #f5f6f7;
-      background-color: darkslategrey;
+      background-color: #09090B;
   }
   h1 {
     padding-top: 70px;
-    color: aqua;
+    color: #B72A33;
   }
 
   footer{
@@ -22,45 +22,49 @@ body {
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-      background-color: #9B287B; /* Amaranth Deep Purple */
-      color: #ffffff;
+      /* background-color: #9B287B; Amaranth Deep Purple */
+      /* color: #ffffff; */
   }
   .bg-2 { 
-      background-color: #122932; /* Dark Gunmetal */
-      color: #ffffff;
+      /* background-color: #122932; Dark Gunmetal */
+      /* color: #ffffff; */
   }
   .bg-3 { 
-      background-color: #F5E6E8; /* Isabelline */
+      /* background-color: #F5E6E8; Isabelline */
       color: #555555;
   }
   .bg-4 { 
-      background-color: #383B53; /* Charcoal */
-      color: #fff;
+      /* background-color: #383B53; Charcoal */
+      /* color: #fff; */
   }
   .container-fluid {
       padding-top: 70px;
       padding-bottom: 70px;
+      
   }
-  .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+    background-color: #B72A33;
+    
+ }
+ .navbar-nav  li a:hover {
       color: #9B287B !important;
+      color: #D39F36;
   }
 
   .carousel-item img {
     width: 120pc;
     height: 350px;
     max-height: 350px;
-    margin:auto;
+    margin: auto;
     display: block;
-   padding-top: 20px;
+    padding-top: 20px;
     }   
    .d-block { 
     height: 350px;
