--- a/styles/signup.css
+++ b/styles/signup.css
@@ -5,29 +5,61 @@ body {
       line-height: 1.8;
       color: #050505; 
       background-color: darkslategrey;
-      
+      text-align: center;
   }
   
   .flex-container {
     display: flex;
+    justify-content: center;
     flex-direction: row;
   }
   
-  .flex-item-left {
-    flex: 50%;
-  }
-  
-  .flex-item-right {
-    flex: 50%;
-  }
-  
-  
-  @media (max-width: 800px) {
-    .flex-item-right, .flex-item-left {
-      flex: 100%;
-      align-self: center;
+ 
+  @media (max-width: 100%) {
+    .flex-container {
+      justify-content: center;
+      flex-direction: column;
     }
   }
+
+
+.split {
+  height: 80%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 10%;
+  bottom: 10%;
+  overflow-x: scroll;
+  padding-top: 0pc;
+}
+.footer {
+bottom: auto;
+justify-content: center;
+}
+
+.left {
+  left: 0;
+
+}
+
+
+.right {
+  right: 0;
+ 
+}
+
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+
   h2 {
     color: aqua;
   }
@@ -66,7 +98,7 @@ body {
   .login-box {
     width: 360px;
     height: 340px;
-    
+    align-self: center;
     border-radius: 3px;
     background-color: white;
   }
@@ -108,6 +140,4 @@ body {
     color: white;
     font-size: 14px;
   }
-footer{
-  margin-left: 20px;
-}
+
