--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     flex-direction: column;
   }
+  
   .row{
     display: inline-flex;
     padding: 20px;
@@ -55,4 +56,102 @@ body {
   }
   .d-block {
     max-height: 350px;
+  }
+
+  #action{
+    
+    flex:25%;
+    height: 250;
+    max-height: 250;
+    width: 350;
+    max-width: 350;
+    padding-left: 20px;
+  }
+
+  #action:hover{
+opacity: 0.5;
+img=
+
+  }
+
+  .column{
+     flex: 0 0 auto;
+    max-width: 20%;
+    padding: 1px 4px;
+  }
+
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other
+  @media screen and (max-width: 600px) {
+    .column {
+      -ms-flex: 100%;
+      flex: 100%;
+      max-width: 100%;
+    } */
+
+
+
+  .form-entry{
+    display: inline-flex;  
+    flex: 0 0 auto;
+    max-width: 800px;
+    align-self: center;
+  }
+
+
+  .img_insert{
+    flex: 0 0 auto;
+    padding: 0 4px;
+   max-height: 100%;
+  
+  }
+
+
+  .img__wrap {
+    position: relative;
+    max-height: 100%;
+  
+  }
+
+  .img_insert img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    max-height: 100%;
+  }
+  
+  .img__description_layer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+      background: rgba(36, 62, 206, 0.6);
+    color: #ffee00;
+    visibility: hidden;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+     transition: opacity .2s, visibility .2s;
+  }
+  
+  .img__wrap:hover .img__description_layer {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .img__description {
+    transition: .2s;
+    transform: translateY(1em);
+  }
+  
+  .img__wrap:hover .img__description {
+    transform: translateY(0);
   }
