--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 
+
 body {
     font: 20px Lilita One, Cursive;
     line-height: 1.8;
@@ -14,6 +15,7 @@ body {
     background-color: #B72A33;
     border: 0;
     --bs-bg-opacity: 0;
+    padding: 20px;
 }
 
 .bg-body-tertiary {
