--- a/templates/info.html
+++ b/templates/info.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "styles/holding_page.css" rel="stylesheet" type="text/css" />
-    <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
+    <link href= "../static/styles/holding_page.css" rel="stylesheet" type="text/css" />
+    <link href= "../static/styles/mainstyle.css" rel="stylesheet" type="text/css" />
   </head>
 
 <body>
@@ -25,6 +25,9 @@
               <a class="nav-link" href="./signup.html">Sign Up</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./login.html">Login</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./info.html">About Us</a>
             </li>
             <li class="nav-item">
@@ -41,7 +44,7 @@
 
   
 <div class="container-fluid bg-1 text-center">
-  <a href="index.html"><img src="images/pic_n_mix.png"  alt="logo" width="250"></a>
+  <a href="index.html"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
 
 <h1>Pick 'N' Flix - About Us</h1>
 
@@ -63,6 +66,9 @@
       <lr>
         <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
         <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="./login.html">Login</a>
+        </li>
       </lr>
       <lr>
         <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
