--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-
-    <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
+    <link href= "../static/styles/mainstyle.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
+
   <h1>Coming Soon</h1>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -69,56 +70,11 @@
     <closeform></closeform></form>
 </form></div>
 </div>
-<div class="row">
-<div>
-<form>
-  <h2>Login</h2>
-    <form>
-      <p class="form_group">
-      <label>Email</label>
-      <input type="email" placeholder="" />
-      </p>
-      <p class="form_group">
-      <label>Password</label>
-      <input type="password" placeholder="" />
-      </p>
-      <input type="button" value="Submit" />
-      <closeform></closeform>
-    </form>
-    </form>
-</div>    
-</div>
-
 
 <h2>Test</h2>
-
-<div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <lr>
-        <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
-        <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
-        <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
-        <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
-      </lr>
-    </ul>
-    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
-  </footer>
-</div>
-
+<footer>
+  <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
