modified html files for flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./login.html">Login</a>
             </li>
-            <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+            <li class="nav-item"><a href="recommendations.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
             <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
           </ul>
           <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
