--- a/templates/partners.html
+++ b/templates/partners.html
@@ -30,7 +30,7 @@ Morbi ac ullamcorper neque, quis placerat diam. Etiam non egestas arcu. Vestibul
           </li>
         </lr>
         <lr>
-          <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+          <li class="nav-item"><a href="RECOMMENDATIONS.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
         </lr>
         <lr>
           <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
