--- a/templates/info.html
+++ b/templates/info.html
@@ -10,37 +10,37 @@
   </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid navbar">
-        <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./signup.html">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./login.html">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./info.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="RECOMMENDATIONS2.html">Recommendations</a>
-            </li>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid navbar">
+      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./signup.html">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./info.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="recommendations.html">Recommendations</a>
+          </li>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
   
 <div class="container-fluid bg-1 text-center">
@@ -64,14 +64,14 @@
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <lr>
-        <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
         <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
         <li class="nav-item">
           <a class="nav-link" href="./login.html">Login</a>
         </li>
       </lr>
       <lr>
-        <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+        <li class="nav-item"><a href="recommendations.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
       </lr>
       <lr>
         <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
