--- a/templates/search.html
+++ b/templates/search.html
@@ -12,39 +12,66 @@
     <h1>Coming Soon</h1>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./signup.html">Sign Up</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./login.html">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./info.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="RECOMMENDATIONS2.html">Recommendations</a>
-              </li>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </ul>
-          </div>
+      <div class="container-fluid navbar">
+        <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./signup.html">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./info.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="recommendations.html">Recommendations</a>
+            </li>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <div class="container">
-        <footer class="py-3 my-4">
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <lr>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./login.html">Login</a>
+            </li>
+          </lr>
+          <lr>
+            <li class="nav-item"><a href="recommendations.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+          </lr>
+          <lr>
+            <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
+            <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+          </lr>
+          <lr>
+            <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
+            <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+          </lr>
+          <lr>
+            <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
+            <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+          </lr>
+        </ul>
+        <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+      </footer>
+    </div>        <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <lr>
               <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
