--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
 
     <div class="container-fluid bg-1 text-center">
       <a href="index.html"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
-      <h1>Welcome to Pick'N'Fix!</h1>
+      <h1>Welcome to Pick'N'Flix!</h1>
       <h2>Your 1-Stop-Shop for all Cinema Listings, Movie Reviews and Recommendations!</h2>
     </div>
     <br>
