--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -55,7 +55,7 @@
 
   <div class="container-fluid bg-1 text-center padding=20px">
     <div class="row">
-      <div class="img__wrap col-sm-4 columns">
+      <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/comedy3.jpg" alt-"Comedy movies"/>
             <div class="img__description_layer">
                 <a class="linky" href="/Comedy"> <p class="img__description results"> Comedy</p></a>
@@ -79,6 +79,7 @@
   </div>
 
   <div class="container-fluid bg-1 text-center padding=20px">
+
     <div class="row">
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/heroes2.jpg" alt="hero movies"/>
