--- a/static/styles/mainstyle.css
+++ b/static/styles/mainstyle.css
@@ -22,6 +22,7 @@ body {
 
 .navbar li a {
     color: #D39F36;
+    text-shadow: #09090B 0px 0px 2px;
 }
 .navbar-nav  li a:hover {
     color: #FFFFFF !important;
@@ -53,27 +54,12 @@ body {
     display: inline-flex;
     padding: 20px;
     align-self: auto    ;
-    
-  }
+ }
+
   .d-block {
     max-height: 350px;
   }
 
-  #action{
-    
-    flex:25%;
-    height: 250;
-    max-height: 250;
-    width: 350;
-    max-width: 350;
-    padding-left: 20px;
-  }
-
-  #action:hover{
-opacity: 0.5;
-img=
-
-  }
 
   .column{
      flex: 0 0 auto;
@@ -88,15 +74,6 @@ img=
     height: 100%;
   }
   
-    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other
-  @media screen and (max-width: 600px) {
-    .column {
-      -ms-flex: 100%;
-      flex: 100%;
-      max-width: 100%;
-    } */
-
-
 
   .form-entry{
     display: inline-flex;  
@@ -112,11 +89,11 @@ img=
   
   }
 
-  .img_insert img {
-    margin-top: 8px;
-    vertical-align: middle;
+  .image {
+    height: 100%;
     width: 100%;
-    max-height: 100%;
+    border-radius: 30px;
+
   }
   
   .img__description_layer {
