--- a/templates/showtimes.html
+++ b/templates/showtimes.html
@@ -57,7 +57,7 @@
     
         {% for shows in show %}
         <tr>
-            <td> {{shows[1]}} </td>
+            <td> <a href="/filmshowings/{{shows[1]}}"> {{shows[1]}} </a></td>
         </tr>
         
     {% endfor %}
