--- a/templates/showtimes.html
+++ b/templates/showtimes.html
@@ -60,7 +60,7 @@
     
         {% for shows in show %}
         <tr>
-            <td> <a href="/filmshowings/{{shows[1]}}"> {{shows[1]}} </a></td>
+            <td> <a href="/Filmshowings/{{shows[1]}}"> {{shows[1]}} </a></td>
             
         </tr>
         
@@ -71,7 +71,7 @@
     
       {% for time in time %}
       <tr>
-          <td> <a href="/filmshowings/{{time[1]}}"> {{time[1]}} {{time[0]}} </a></td>
+          <td> <a href="/Filmshowings/{{time[1]}}"> {{time[1]}} {{time[0]}} </a></td>
       </tr>
       
   {% endfor %}
@@ -81,7 +81,7 @@
     
     {% for venue in location %}
     <tr>
-        <td> <a href="/filmshowings/{{venue[1]}}"> {{venue [1]}} </a></td>
+        <td> <a href="/Filmshowings/{{venue[1]}}"> {{venue [1]}} </a></td>
     </tr>
     
 {% endfor %}
