changed genre pages

--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -60,23 +60,23 @@
   <div class="container-fluid bg-1 text-center padding=20px">
     <div class="row">
       <div class="img__wrap col-sm-4">
-        <img class="image" src="../static/images/comedy3.jpg" alt-"Comedy movies"/>
+        <img class="image" src="../static/images/comedy3.jpg" alt="Comedy movies"/>
             <div class="img__description_layer">
-                <a class="linky" href="/Comedy"> <p class="img__description results"> Comedy</p></a>
+                <a class="linky" href="/Recommendations/Comedy"> <p class="img__description results"> Comedy</p></a>
             </div>
       </div>
 
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/action.jpeg" alt="Action movies"/>
         <div class="img__description_layer">
-            <a class="linky" href="/Action"> <p class="img__description results"> Action</p></a>
+            <a class="linky" href="/Recommendations/Action"> <p class="img__description results"> Action</p></a>
         </div>
       </div>
 
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/horror2.jpg" alt="horror movies"/>
         <div class="img__description_layer">
-            <a class="linky" href="/Horror"> <p class="img__description results"> Horror</p></a>
+            <a class="linky" href="/Recommendations/Horror"> <p class="img__description results"> Horror</p></a>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/heroes2.jpg" alt="hero movies"/>
         <div class="img__description_layer">
-            <a class="linky" href="/Heroes"> <p class="img__description results"> Super Heroes</p></a>
+            <a class="linky" href="/Recommendations/Heroes"> <p class="img__description results"> Super Heroes</p></a>
 
         </div>
       </div>
@@ -96,14 +96,14 @@
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/romance2.jpeg" alt="romance movies"/>
         <div class="img__description_layer">
-            <a class="linky" href="/Romance"> <p class="img__description results"> Romance </p></a>        
+            <a class="linky" href="/Recommendations/Romance"> <p class="img__description results"> Romance </p></a>        
         </div>
       </div>
 
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/question.jpg" alt="Question marks"/>
         <div class="img__description_layer">
-            <a class="linky" href="/Random"> <p class="img__description results"> Random </p></a>
+            <a class="linky" href="/Recommendations/Random"> <p class="img__description results"> Random </p></a>
         </div>
       </div>
     </div>
