--- a/templates/showtimes.html
+++ b/templates/showtimes.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="container-fluid bg-1 text-center padding=20px">    
-      <h4>Here are the Local Showtimes for {{Cinema}}:</h4>
+      <h4>Here are the Local Showtimes for Cambridge:</h4>
     </div>
 
     <center>
