--- a/templates/genre.html
+++ b/templates/genre.html
@@ -1,10 +1,12 @@
 <html>
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainstyle2.css') }}">
 
 </head>
-<h1> <center> Here is your recommended <font color="Red"> Super Hero </font> Film </center></h1>
+
+<h1> <center> Here is your recommended <font color="Red"> {{gname}} </font> Film </center></h1>
 <br>
 <br>
 
@@ -22,6 +24,6 @@
 <br>
 <br>
 
-<a href="/"> Home </a>
+<a href="/Recommendations"> Back </a>
 
 </html>
