back button add to all pages

--- a/templates/showtimes.html
+++ b/templates/showtimes.html
@@ -71,7 +71,7 @@
     
       {% for time in time %}
       <tr>
-          <td> <a href="/Filmshowings/{{time[1]}}"> {{time[1]}} {{time[0]}} </a></td>
+          <td> <a href="/Filmshowings/{{time[1]}}">  {{time[1]}} {{time[0]}} </a></td>
       </tr>
       
   {% endfor %}
@@ -87,7 +87,7 @@
 {% endfor %}
 </table>
 
-  <a href="/"> Home </a>
+<button onclick="history.back()">Go Back</button>
 </center>
 
 
