--- a/templates/info.html
+++ b/templates/info.html
@@ -64,6 +64,11 @@
   Welcome to our site, we hope you create an account and continue your movie watching with us.
 </div>
 
+<center>
+  <button onclick="history.back()">Go Back</button>
+  </center>
+
+
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
