--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -108,7 +108,9 @@
       </div>
     </div>
   </div>
-
+  <center>
+    <button onclick="history.back()">Go Back</button>
+  </center>
 
 <br>
 <br>
@@ -146,7 +148,6 @@
     <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
       
